--- a/aland-portfolio/package.json
+++ b/aland-portfolio/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.9.1",
+    "i18next": "^25.0.1",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "semver": "^7.7.1"
   },
   "devDependencies": {
