--- a/aland-portfolio/package.json
+++ b/aland-portfolio/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.293",
     "react-router-dom": "^7.5.0",
     "react-simple-typewriter": "^5.0.1",
     "semver": "^7.7.1"
